# Spectra

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  components.json  crowdin.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: main.yml
backend/: Cargo.toml  bacon.toml  build.rs  config.toml
backend/assets/: config_example.toml  spectra.service
backend/src/: data.rs  main.rs  types.rs  util.rs
backend/src/service/: frontend.rs  main.rs  mod.rs  scheduled.rs
backend/src/service/api/: item.rs  misc.rs  mod.rs  result.rs  setup.rs  types.rs  user.rs
migrations/: 20250715065621_init.sql  20250721112938_download_filename.sql  20250722070526_extra_data.sql  20250722151335_user.sql  20250725142348_avatar.sql  20250729143607_remove_foreign.sql  20250730073300_item_available.sql  20250916134808_imgfile.sql  20260319121525_sys_config.sql
scripts/: build.js  common.js  dev.js  seed_items.sh  seed_users.sh  update_version_number.js
src/: README.md
src/components/: ThemeProvider.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  item.tsx  label.tsx  pagination.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  table.tsx  textarea.tsx  tooltip.tsx
web/: index.html  vite.config.js
web/admin/: index.html  main.tsx
web/admin/components/: DebugInfo.tsx  Overview.tsx  Settings.tsx  SharedContent.tsx  UserManagement.tsx  UserProfile.tsx
web/admin/context/: AdminUserContext.ts
web/code/: hljs.ts  index.html  main.ts  main.tsx  style.css
web/code/components/: CodeBlock.tsx  PreviewBlock.tsx  TopBar.tsx  typst.react.COPYING
web/code/components/typst.react/: TypstDocument.tsx  typst.css
web/components/: HeightTransition.tsx  LanguageSwitcher.tsx  Logo.tsx  TopBar.tsx  i18n.ts  languages.ts
web/components/custom/: typst_language.ts
web/dashboard/: HeightTransition.tsx  fetch.ts  index.html  main.tsx
web/dashboard/components/: AboutDialog.tsx  AreaFileShare.tsx  AreaOperation.tsx  AreaPasteBin.tsx  AreaShared.tsx  AreaShortUrl.tsx  FinishedCard.tsx  TopBar.tsx  Turnstile.tsx
web/not_found/: index.html  main.ts  main.tsx
web/password/: index.html  main.ts  main.tsx  style.css
web/password/components/: AuthCard.tsx  TopBar.tsx
web/public/: style.css
web/public/locales/en/: admin.json  codepage.json  dashboard.json  languages.json  not_found.json  password.json  setup.json  translation.json
web/public/locales/zh/: admin.json  codepage.json  dashboard.json  languages.json  not_found.json  password.json  setup.json  translation.json
web/public/locales/zh_TW/: dashboard.json  not_found.json  password.json
web/setup/: index.html  interface.tsx  main.tsx  utils.tsx
web/setup/components/: SetupStep1.tsx  SetupStep2.tsx
