[package]
name = "Spectra"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = { version = "0.8", features = ["query", "multipart", "macros"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-private"] }
axum-reverse-proxy = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "fs",
    "trace",
    "compression-zstd",
    "compression-br",
    "compression-gzip",
    "compression-deflate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.40", features = ["cargo", "wrap_help"] }
shadow-rs = "1.2.0"
toml = "0.9"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "chrono",
] }
uuid = { version = "1", features = ["v7", "serde"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
http-body-util = "0.1.3"
tokio-util = "0.7.15"
futures-util = "0.3.31"
sha2 = "0.10.9"
mime_guess = "2.0.5"
rust-embed = "8.7.2"
strum = "0.27.2"
strum_macros = "0.27.2"
rand = "0.9.2"
dashmap = "6.1.0"
async-recursion = "1.1.1"
tokio-cron-scheduler = "0.14.0"
cookie = "0.18.1"
infer = "0.19.0"
reqwest = { version = "0.12.22", features = ["json"] }
croner = "3.0.0"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shadow-rs = "1.2.0"
tokei = "12.1.2"
